--- a/pour_decisions.ipynb
+++ b/pour_decisions.ipynb
@@ -8,7 +8,11 @@
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# Study data files\n",
+    "russia_alcohol = \"Data/russia_alcohol.csv\"\n",
+    "unemployment_data = \"Data/unemployment_data.csv\"\n"
    ]
   }
  ],
