--- a/nathan_pour-1.ipynb
+++ b/nathan_pour-1.ipynb
@@ -706,6 +706,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      year            region  wine  beer  vodka  champagne  brandy\n",
+      "1571  2016   Murmansk Oblast   8.1  47.6   12.2        2.5     1.9\n",
+      "1553  2016    Kamchatka Krai   6.6  85.4   10.4        3.3     1.3\n",
+      "1564  2016  Leningrad Oblast   8.1  41.0    8.4        1.6     1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "alc_df\n",
+    "largest_wine=alc_df[alc_df[\"year\"]==2016].nlargest(3,\"wine\")\n",
+    "largest_beer=alc_df[alc_df[\"year\"]==2016].nlargest(3,\"beer\")\n",
+    "largest_vodka=alc_df[alc_df[\"year\"]==2016].nlargest(3,\"vodka\")\n",
+    "largest_champagne=alc_df[alc_df[\"year\"]==2016].nlargest(3,\"champagne\")\n",
+    "largest_brandy=alc_df[alc_df[\"year\"]==2016].nlargest(3,\"brandy\")\n",
+    "print(largest_brandy)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
